--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <input id="clearButton" type="button" value="Clear" >
         <input id="randomButton" type="button" value="Random" >
     </div>
-    <script type="module">
+    <!-- <script type="module">
             import { main } from './app.js';
             main();
-    </script>
+    </script> -->
 </body>
 </html>
