ファビコン追加/CSS分離

--- a/index.html
+++ b/index.html
@@ -3,12 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>life game</title>
-    <style>
-        canvas {
-            border: solid 1px #666666;
-            margin: 11px;
-        }
-    </style>
+    <link href="./css/app.css" rel="stylesheet">
+    <link rel=”icon” href="./assets/images/eguchi.ico">
 </head>
 <body>
     <div>
