ファビコン修正

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>life game</title>
     <link href="./css/app.css" rel="stylesheet">
-    <link rel=”icon” href="./assets/images/eguchi.ico">
+    <link rel="icon" type="image/x-icon" href="./assets/images/eguchi.ico">
 </head>
 <body>
     <div>
