--- a/index.html
+++ b/index.html
@@ -8,6 +8,41 @@
 </head>
 <body>
     <div>
+        <h3>ライフゲーム (Conway's Game of Life) とは？</h3>
+        1970年にイギリスの数学者ジョン・ホートン・コンウェイ (John Horton Conway) が考案した <br>
+        生命の誕生、進化、淘汰などのプロセスを簡易的なモデルで再現したシミュレーションゲームである。 <br>
+        単純なルールでその模様の変化を楽しめるため、パズルの要素を持っている。
+    </div>
+    <div>
+        <h3>ルール</h3>
+        各セルには8つの近傍セルがある (ムーア近傍) 。<br>
+        各セルには「生」と「死」の2つの状態があり、<br>
+        あるセルの次のステップ（世代）の状態は周囲の8つのセルの今の世代における状態により決定される。
+        <table border="1">
+            <tr>
+                <th>ライフイベント</th>
+                <th>説明</th>
+            </tr>
+            <tr>
+                <td>誕生</td>
+                <td>死んでいるセルに隣接する生きたセルがちょうど3つあれば、次の世代が誕生する。</td>
+            </tr>
+            <tr>
+                <td>生存</td>
+                <td>生きているセルに隣接する生きたセルが2つか3つならば、次の世代でも生存する。</td>
+            </tr>
+            <tr>
+                <td>過疎</td>
+                <td>生きているセルに隣接する生きたセルが1つ以下ならば、過疎により死滅する。</td>
+            </tr>
+            <tr>
+                <td>過密</td>
+                <td>生きているセルに隣接する生きたセルが4つ以上ならば、過密により死滅する。</td>
+            </tr>
+        </table>
+    </div>
+    <div>
+        <h3>実演</h3>
         <canvas id="mycanvas"></canvas>
     </div>
     <div>
