世代と個数表示機能追加

--- a/index.html
+++ b/index.html
@@ -44,10 +44,16 @@
     <div>
         <h3>実演</h3>
         <div>
-            <input id="startButton" type="button" value="Start" >
-            <input id="stopButton" type="button" value="Stop" >
-            <input id="clearButton" type="button" value="Clear" >
-            <input id="randomButton" type="button" value="Random" >
+            <input id="startButton" type="button" value="スタート">
+            <input id="stopButton" type="button" value="ストップ">
+            <input id="clearButton" type="button" value="クリア">
+            <input id="randomButton" type="button" value="ランダム配置">
+        </div>
+        <div>
+            <span id="generationCount">0世代<span>
+        </div>
+        <div>
+            <span id="surviveCount">0個<span>
         </div>
         <canvas id="mycanvas"></canvas>
     </div>
