固定物体生成

--- a/index.html
+++ b/index.html
@@ -44,12 +44,22 @@
     <div>
         <h3>実演</h3>
         <div>
+            セルをドラッグすると生きたセルが作成できます。<br>
+            シフトをおしながらマウスカーソルを動かすと生きたセルを死んだセルにすることができます。
+        </div>
+        <div>
+            <h5>操作ボタン</h5>
             <input id="startButton" type="button" value="スタート">
             <input id="stopButton" type="button" value="ストップ">
             <input id="clearButton" type="button" value="クリア">
             <input id="randomButton" type="button" value="ランダム配置">
         </div>
         <div>
+            <h5>固定物体生成ボタン</h5>
+            <input id="createBlockButton" type="button" value="ブロック">
+        </div>
+        <div>
+            <h5>固定物体生成ボタン</h5>
             <span id="generationCount">0世代<span>
         </div>
         <div>
