パターン説明追加

--- a/index.html
+++ b/index.html
@@ -40,6 +40,28 @@
                 <td>生きているセルに隣接する生きたセルが4つ以上ならば、過密により死滅する。</td>
             </tr>
         </table>
+        <table border="1" style="margin-top: 20px;">
+            <tr>
+                <th>パターン</th>
+                <th>説明</th>
+            </tr>
+            <tr>
+                <td>固定物体</td>
+                <td>固定物体とは世代が進んでも同じ場所で形が変わらないもの。しかし他のセルの影響で崩れる可能性はある</td>
+            </tr>
+            <tr>
+                <td>振動子</td>
+                <td>ある周期で同じ図形に戻るものを指す。しかし他のセルの影響で崩れる可能性はある</td>
+            </tr>
+            <tr>
+                <td>移動物体</td>
+                <td>一定のパターンを繰り返しながら移動していくもの。しかし他のセルの影響で崩れる可能性はある</td>
+            </tr>
+            <tr>
+                <td>繁殖型</td>
+                <td>マス目が無限であれば無限に増え続けるパターン。しかし他のセルの影響で崩れる可能性はある</td>
+            </tr>
+        </table>
     </div>
     <div>
         <h3>実演</h3>
@@ -59,7 +81,7 @@
             <input id="createBlockButton" type="button" value="ブロック">
         </div>
         <div>
-            <h5>固定物体生成ボタン</h5>
+            <h5>カウンター</h5>
             <span id="generationCount">0世代<span>
         </div>
         <div>
