個数カウンター非表示

--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
             <h5>カウンター</h5>
             <span id="generationCount">0世代<span>
         </div>
-        <div>
+        <!-- <div>
             <span id="surviveCount">0個<span>
-        </div>
+        </div> -->
         <canvas id="mycanvas"></canvas>
     </div>
 
