一旦繁殖型の説明を非表示

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
                 <td>移動物体</td>
                 <td>一定のパターンを繰り返しながら移動していくもの。しかし他のセルの影響で崩れる可能性はある</td>
             </tr>
-            <tr>
+            <!-- <tr>
                 <td>繁殖型</td>
                 <td>マス目が無限であれば無限に増え続けるパターン。しかし他のセルの影響で崩れる可能性はある</td>
-            </tr>
+            </tr> -->
         </table>
     </div>
     <div>
@@ -79,6 +79,14 @@
         <div>
             <h5>固定物体生成ボタン</h5>
             <input id="createBlockButton" type="button" value="ブロック">
+        </div>
+        <div>
+            <h5>振動子生成ボタン</h5>
+            <input id="createBlinkerButton" type="button" value="ブリンカー">
+        </div>
+        <div>
+            <h5>移動物体生成ボタン</h5>
+            <input id="createGliderButton" type="button" value="グライダー">
         </div>
         <div>
             <h5>カウンター</h5>
