--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="utf-8">
     <title>life game</title>
-    <link href="./css/app.css" rel="stylesheet">
+    <!-- <link href="./css/app.css" rel="stylesheet"> -->
     <link rel="icon" type="image/x-icon" href="./assets/images/eguchi.ico">
+    <style>
+        canvas {
+            border: solid 1px #666666;
+            margin: 11px;
+        }
+    </style>
 </head>
 <body>
     <div>
