--- a/index.html
+++ b/index.html
@@ -98,8 +98,9 @@
     </div>
 
     <script type="module">
-            import { main } from './js/app.js';
-            main();
+        alert('ok');
+        import { main } from './js/app.js';
+        main();
     </script>
 </body>
 </html>
