--- a/index.html
+++ b/index.html
@@ -97,10 +97,7 @@
         <canvas id="mycanvas"></canvas>
     </div>
 
-    <script>
-        alert('o');
-    </script>
-    <script>
+    <script type="module">
         alert('ok');
         import { main } from './js/app.js';
         main();
