--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <canvas id="mycanvas"></canvas>
     </div>
 
-    <script type="module">
+    <script >
         alert('ok');
         import { main } from './js/app.js';
         main();
