--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
         <canvas id="mycanvas"></canvas>
     </div>
 
-    <script >
+    <script type="module">
         alert('ok');
-        import { main } from './js/app.js';
-        main();
+        // import { main } from './js/app.js';
+        // main();
     </script>
 </body>
 </html>
