--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <script type="module">
         alert('ok');
-        // import { main } from './js/app.js';
+        import { main } from './js/app.js';
         // main();
     </script>
 </body>
