--- a/index.html
+++ b/index.html
@@ -99,7 +99,10 @@
 
     <script type="module">
         alert('ok');
-        import { main } from './js/app.js';
+        import { main } from './js/test.js';
+        main();
+
+        // import { main } from './js/app.js';
         // main();
     </script>
 </body>
