--- a/index.html
+++ b/index.html
@@ -99,11 +99,8 @@
 
     <script type="module">
         alert('ok');
-        import { main } from './js/test.js';
+        import { main } from './js/app.js';
         main();
-
-        // import { main } from './js/app.js';
-        // main();
     </script>
 </body>
 </html>
