--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     </div>
     <div>
         <h3>ルール</h3>
-        各セルには8つの近傍セルがある (ムーア近傍) 。<br>
+        各セルには8つの近傍セルがある  。<br>
         各セルには「生」と「死」の2つの状態があり、<br>
         あるセルの次のステップ（世代）の状態は周囲の8つのセルの今の世代における状態により決定される。
-        <table border="1">
+        <table>
             <tr>
                 <th>ライフイベント</th>
                 <th>説明</th>
@@ -46,7 +46,7 @@
                 <td>生きているセルに隣接する生きたセルが4つ以上ならば、過密により死滅する。</td>
             </tr>
         </table>
-        <table border="1" style="margin-top: 20px;">
+        <table style="margin-top: 20px;">
             <tr>
                 <th>パターン</th>
                 <th>説明</th>
