--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 
     <script type="module">
         alert('ok');
-        import { main } from './js/test.js';
-        main();
+        // import { main } from './js/test.js';
+        // main();
     </script>
 </body>
 </html>
