--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
     </div>
 
     <script type="module">
-        alert('ok');
+        // alert('ok');
         import { main } from './js/test.js';
-        // main();
+        main();
     </script>
 </body>
 </html>
