--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div>
 
     <script type="module">
-        import { main } from './js/test.js';
+        import { main } from './js/app.js';
         main();
     </script>
 </body>
