--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
             margin: 11px;
         }
     </style>
+    <script type="module">
+        import { main } from './js/app.js';
+        main();
+    </script>
 </head>
 <body>
     <div>
@@ -96,9 +100,9 @@
         <canvas id="mycanvas"></canvas>
     </div>
 
-    <script type="module">
+    <!-- <script type="module">
         import { main } from './js/app.js';
         main();
-    </script>
+    </script> -->
 </body>
 </html>
