--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
         </div>
         <canvas id="mycanvas"></canvas>
     </div>
+    <script type="module">
+        import { test } from './js/test.js';
+        test();
+    </script>
 
     <script type="module">
         import { main } from './js/app.js';
