--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <canvas id="mycanvas"></canvas>
     </div>
     <script type="module">
-        import { main } from './js/app.js';
+        import { main } from './js/test.js';
         main();
     </script>
 </body>
