--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-    <!-- <div>
+    <div>
         <h3>ライフゲーム (Conway's Game of Life) とは？</h3>
         1970年にイギリスの数学者ジョン・ホートン・コンウェイ (John Horton Conway) が考案した <br>
         生命の誕生、進化、淘汰などのプロセスを簡易的なモデルで再現したシミュレーションゲームである。 <br>
@@ -63,13 +63,13 @@
                 <td>一定のパターンを繰り返しながら移動していくもの。しかし他のセルの影響で崩れる可能性はある</td>
             </tr>
         </table>
-    </div> -->
+    </div>
     <div>
-        <!-- <h3>実演</h3>
+        <h3>実演</h3>
         <div>
             セルをドラッグすると生きたセルが作成できます。<br>
             シフトをおしながらマウスカーソルを動かすと生きたセルを死んだセルにすることができます。
-        </div> -->
+        </div>
         <div>
             <h5>操作ボタン</h5>
             <input id="startButton" type="button" value="スタート">
