--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
     <div>
         <h3>実演</h3>
         <div>
-            セルをドラッグすると生きたセルが作成できます。<br>
-            シフトをおしながらマウスカーソルを動かすと生きたセルを死んだセルにすることができます。
+            PCの場合はセルをドラッグすると生きたセルが作成できます。<br>
+            シフト押しながらマウスカーソルを動かすと生きたセルを死んだセルにすることができます。<br>
+            スマホの場合は1セルづつクリックするとセルの生死が逆転します。<br>
         </div>
         <div>
             <h5>操作ボタン</h5>
