--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             margin: 11px;
         }
     </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div>
