--- a/index.html
+++ b/index.html
@@ -3,13 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>life game</title>
+    <link rel="stylesheet" type="text/css" href="./css/app.css">
     <link rel="icon" type="image/x-icon" href="./assets/images/eguchi.ico">
-    <style>
-        canvas {
-            border: solid 1px #666666;
-            margin: 11px;
-        }
-    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
