--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <h3>ライフゲーム (Conway's Game of Life) とは？</h3>
+        <h3>ライフゲーム (Conway's Game of Life) とは</h3>
         1970年にイギリスの数学者ジョン・ホートン・コンウェイ (John Horton Conway) が考案した <br>
         生命の誕生、進化、淘汰などのプロセスを簡易的なモデルで再現したシミュレーションゲームである。 <br>
         単純なルールでその模様の変化を楽しめるため、パズルの要素を持っている。
