--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <div>
+    <div id="hoge">
         <h3>ライフゲーム (Conway's Game of Life) とは</h3>
         1970年にイギリスの数学者ジョン・ホートン・コンウェイ (John Horton Conway) が考案した <br>
         生命の誕生、進化、淘汰などのプロセスを簡易的なモデルで再現したシミュレーションゲームである。 <br>
